--- a/README.mediawiki
+++ b/README.mediawiki
@@ -15,6 +15,8 @@ angularjs and bootstrap.css
 ##data-pick-model: model to be bound
 
 [[src/main/webapp/index.html|Example]]
+
+[http://plnkr.co/edit/bVrDyIKoSZKuC18BIbQb?p=preview Example in Plunker]
 ==test==
 run mvn test
 
